force-app/main/default/objects/Role_Group_Association__c/Role_Group_Association__c.object-meta.xml
<CustomObject>
    <description>Role/Region to Public Group Association table</description>
    <label>Role Group Association</label>
    <nameField>
        <displayFormat>RGA{00000}</displayFormat>
        <label>Role Group Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Group Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>