force-app/main/default/objects/Role_Group_Association__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <label>Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>