force-app/main/default/objects/Role_Group_Association__c/fields/Is_All_Roles__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Roles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is All Roles</label>
    <type>Checkbox</type>
</CustomField>