force-app/main/default/objects/Role_Group_Association__c/fields/Program_Node__c.field-meta.xml
<CustomField>
    <fullName>Program_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Node</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipName>Managed_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>