force-app/main/default/objects/Role_Group_Association__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipName>Managed_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>