force-app/main/default/objects/Role_Group_Association__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Update Pending</fullName>
            </value>
            <value>
                <fullName>Delete Pending</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
                <isActive>false</isActive>
                <label>Deleted</label>
            </value>
            <value>
                <fullName>Updated</fullName>
                <isActive>false</isActive>
                <label>Updated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>