force-app/main/default/objects/Role_Group_Association__c/fields/Volunteer_Program__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program__c.Enterprise_Level_Program__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipName>Managed_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>