force-app/main/default/objects/Role_Group_Association__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>Group_Name__c</columns>
    <columns>NAME</columns>
    <columns>Group_Id__c</columns>
    <columns>Assignment_Status__c</columns>
    <columns>Is_All_Roles__c</columns>
    <columns>Role__c</columns>
    <columns>Program_Node__c</columns>
    <columns>Volunteer_Program__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>